Separate out text and parquet benchmarks

--- a/concourse/pipelines/perf_pipeline.yml
+++ b/concourse/pipelines/perf_pipeline.yml
@@ -326,8 +326,7 @@ jobs:
       BENCHMARK_GCS: {{perf-benchmark-gcs}}
       BENCHMARK_GPHDFS: {{perf-benchmark-gphdfs}}
       BENCHMARK_WASB: {{perf-benchmark-wasb}}
-      BENCHMARK_S3_CONCURRENCY: {{perf-benchmark-s3-concurrency}}
-      BENCHMARK_HADOOP_CONCURRENCY: {{perf-benchmark-hadoop-concurrency}}
+      BENCHMARK_CONCURRENCY: {{perf-benchmark-concurrency}}
       ADL_ACCOUNT: {{adl-account}}
       ADL_CLIENT_ID: {{adl-client-id}}
       ADL_CREDENTIAL: {{adl-credential}}
