--- a/concourse/pipelines/perf_pipeline.yml
+++ b/concourse/pipelines/perf_pipeline.yml
@@ -337,4 +337,5 @@ jobs:
       GOOGLE_CREDENTIALS: {{data-gpdb-ud-google-json-key}}
       WASB_ACCOUNT_NAME: {{wasb-account-name}}
       WASB_ACCOUNT_KEY: {{wasb-account-key}}
+      SLEEP_BEFORE_DESTROY_IN_SEC: {{perf-sleep-before-destroy}}
       TARGET_OS: centos
