--- a/concourse/settings/perf-settings-10g.yml
+++ b/concourse/settings/perf-settings-10g.yml
@@ -1,3 +1,4 @@
+# 10G Perf Pipeline Settings
 tf-bucket-path: clusters-google/
 tf-cloud-provider: google
 folder-prefix: perf
@@ -7,14 +8,14 @@ enable-impersonation-multinode: true
 pxf-jvm-opts: "-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heap_dump -Xmx2g -Xms1g"
 perf-ccp-reap-minutes: 120
 
-perf-gpdb-number-of-nodes: 3
+perf-gpdb-number-of-nodes: 4
 perf-gpdb-segments-per-host: 4
-perf-gpdb-instance-type: n1-standard-4
+perf-gpdb-instance-type: n1-standard-8
 perf-gpdb-disk-size: 64
 
 perf-hadoop-number-of-nodes: 3
 perf-hadoop-initialization-script: gs://pxf-perf/scripts/update-site-core.sh
-perf-hadoop-initialization-script-timeout: 1500
+perf-hadoop-initialization-script-timeout: 500
 perf-hadoop-instance-type: n1-standard-4
 perf-hadoop-disk-size: 64
 
@@ -22,9 +23,12 @@ perf-trigger-interval: 24h
 perf-trigger-start: 12:30 PM
 perf-trigger-stop: 12:40 PM
 
-perf-benchmark-concurrency: 1
-perf-benchmark-adl: true
+perf-benchmark-concurrency: 5
+perf-benchmark-hadoop: true
+perf-benchmark-adl: false
 perf-benchmark-s3: true
-perf-benchmark-gcs: true
-perf-benchmark-gphdfs: true
-perf-benchmark-wasb: true
+perf-benchmark-s3-extension: true
+perf-benchmark-gcs: false
+perf-benchmark-gphdfs: false
+perf-benchmark-wasb: false
+perf-sleep-before-destroy: 600
