Use 5X_STABLE gpdb binaries for perf testing

--- a/concourse/pipelines/perf_pipeline.yml
+++ b/concourse/pipelines/perf_pipeline.yml
@@ -92,7 +92,7 @@ resources:
 - name: gpdb_src
   type: git
   source:
-    branch: master
+    branch: {{gpdb-branch}}
     uri: {{gpdb-git-remote}}
 
 - name: pxf_src
