--- a/server/build.gradle
+++ b/server/build.gradle
@@ -109,9 +109,6 @@ project('pxf') {
     jar.enabled = false
     dependencies {
         // AWS S3 support jars
-        bundleJars "com.fasterxml.jackson.core:jackson-core:2.9.8"
-        bundleJars "com.fasterxml.jackson.core:jackson-databind:2.9.8"
-        bundleJars "com.fasterxml.jackson.core:jackson-annotations:2.9.8"
         bundleJars "org.apache.httpcomponents:httpclient:4.5.5"
         bundleJars "org.apache.httpcomponents:httpcore:4.4.9"
         bundleJars "org.apache.hadoop:hadoop-aws:${hadoopVersion}"
@@ -163,6 +160,9 @@ project('pxf-hdfs') {
     dependencies {
         compile(project(':pxf-api'))
         compile "org.apache.avro:avro-mapred:1.7.7"
+        compile "com.fasterxml.jackson.core:jackson-databind:2.9.8"
+        compile "com.fasterxml.jackson.core:jackson-core:2.9.8"
+        compile "com.fasterxml.jackson.core:jackson-annotations:2.9.8"
         compile "org.apache.hadoop:hadoop-mapreduce-client-core:${hadoopVersion}"
         compile "org.apache.hadoop:hadoop-yarn-api:${hadoopVersion}" // Kerberos dependency
         compile "org.apache.hadoop:hadoop-yarn-client:${hadoopVersion}" // Kerberos dependency
@@ -176,6 +176,9 @@ project('pxf-hdfs') {
         compile "org.apache.parquet:parquet-encoding:${parquetVersion}"
         compile "org.apache.parquet:parquet-generator:${parquetVersion}"
         compile "org.apache.parquet:parquet-hadoop:${parquetVersion}"
+
+        // for parquet tests
+        testCompile "org.apache.parquet:parquet-pig:1.10.0"
 
         bundleJars "org.apache.avro:avro:1.7.7"
         // Dependency in hadoop 2.9.2
