Remove Concourse warnings from perf task

--- a/concourse/tasks/pxf-perf-multi-node.yml
+++ b/concourse/tasks/pxf-perf-multi-node.yml
@@ -9,3 +9,26 @@ inputs:
 - name: terraform_dataproc
 run:
   path: pxf_src/concourse/scripts/pxf-perf-multi-node.bash
+
+params:
+  ADL_REFRESH_URL:
+  BENCHMARK_CONCURRENCY:
+  BENCHMARK_WASB:
+  BENCHMARK_S3:
+  WASB_ACCOUNT_NAME:
+  SCALE:
+  GOOGLE_CREDENTIALS:
+  BENCHMARK_GPHDFS:
+  SLEEP_BEFORE_DESTROY_IN_SEC:
+  ADL_ACCOUNT:
+  BENCHMARK_S3_EXTENSION:
+  ADL_CREDENTIAL:
+  ADL_CLIENT_ID:
+  BENCHMARK_HADOOP:
+  AWS_ACCESS_KEY_ID:
+  AWS_DEFAULT_REGION:
+  TARGET_OS:
+  BENCHMARK_GCS:
+  WASB_ACCOUNT_KEY:
+  AWS_SECRET_ACCESS_KEY:
+  BENCHMARK_ADL:
