Avoid suspending test execution with pxf_test_debug set to true
Authored-by: Shivram Mani <smani@pivotal.io>

--- a/automation/Makefile
+++ b/automation/Makefile
@@ -45,7 +45,9 @@ ifneq "$(SECRET_ACCESS_KEY)" ""
 endif
 
 ifeq "$(PXF_TEST_DEBUG)" "true"
-	MAVEN_DEBUG_OPTS+= -Dmaven.surefire.debug -DPXF_TEST_DEBUG=$(PXF_TEST_DEBUG)
+	MAVEN_DEBUG_OPTS+= -DPXF_TEST_DEBUG=$(PXF_TEST_DEBUG)
+	# Uncomment below line to remote debug pxf automation test
+	# MAVEN_DEBUG_OPTS+= -Dmaven.surefire.debug
 endif
 
 MVN=mvn
