Generate pxf release pipeline for GPDB6 beta

--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -104,7 +104,7 @@ resource_types:
   type: docker-image
   source:
     repository: ljfranklin/terraform-resource
-{% if compile_gpdb and gpdb_branch == 'master' %}
+{% if gpdb_branch == 'master' %}
 
 - name: gcs
   type: docker-image
@@ -195,6 +195,13 @@ resources:
     tag: 7
 
 - name: bin_gpdb_centos6
+{% if pipeline_type == "release" and gpdb_branch == 'master' %}
+  type: gcs
+  source:
+    bucket: ((gcs-bucket-intermediates))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    versioned_file: gpdb_master/bin_gpdb_centos6/bin_gpdb.tar.gz
+{% else %}
   type: s3
   source:
     access_key_id: {{bucket-access-key-id}}
@@ -210,8 +217,16 @@ resources:
     bucket: {{icw_green_bucket}}
     versioned_file: bin_gpdb_centos6/gpdb_branch_((gpdb-branch))/icw_green/bin_gpdb.tar.gz
 {% endif %}
+{% endif %}
 
 - name: bin_gpdb_ubuntu16
+{% if gpdb_branch == 'master' %}
+  type: gcs
+  source:
+    bucket: ((gcs-bucket-intermediates))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    versioned_file: gpdb_master/compiled_bits_ubuntu16/compiled_bits_ubuntu16.tar.gz
+{% else %}
   type: s3
   source:
     access_key_id: {{bucket-access-key-id}}
@@ -219,7 +234,8 @@ resources:
     bucket: gpdb5-stable-concourse-builds
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: compiled_bits_ubuntu16/compiled_bits_ubuntu16.tar.gz
+    versioned_file: bin_gpdb_ubuntu16/bin_gpdb.tar.gz
+{% endif %}
 
 - name: pxf_tarball
   type: s3
@@ -986,7 +1002,7 @@ jobs:
     passed:
     - test_pxf_hdp_centos6
     - test_pxf_cdh_centos6
-    - test_pxf_mapr_centos6
+    #- test_pxf_mapr_centos6
     - test_pxf_hdp_ubuntu16
     - test_pxf_adl
     - test_pxf_gs
@@ -1004,7 +1020,7 @@ jobs:
     - test_pxf_hdp_centos6
     - test_pxf_cdh_centos6
     - test_pxf_hdp_ubuntu16
-    - test_pxf_mapr_centos6
+    #- test_pxf_mapr_centos6
     - test_pxf_adl
     - test_pxf_gs
     - test_pxf_minio
