--- a/server/pxf-service/src/templates/user/conf/pxf-log4j.properties
+++ b/server/pxf-service/src/templates/user/conf/pxf-log4j.properties
@@ -21,6 +21,12 @@ log4j.rootLogger=INFO, ROLLINGFILE
 # uncomment to see DEBUG messages from PXF service
 #log4j.logger.org.greenplum.pxf=DEBUG
 
+# the levels below are tuned to provide minimal output, change to INFO or DEBUG to troubleshoot
+log4j.logger.com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystemBase=WARN
+log4j.logger.org.apache.hadoop=WARN
+log4j.logger.org.apache.zookeeper=WARN
+log4j.logger.hive.metastore=WARN
+
 log4j.logger.org.apache.parquet.hadoop=WARN
 log4j.appender.ROLLINGFILE=org.apache.log4j.RollingFileAppender
 # use the same value directory as set for $PXF_LOGDIR
