--- a/concourse/tasks/test_pxf_multinode.yml
+++ b/concourse/tasks/test_pxf_multinode.yml
@@ -8,6 +8,8 @@ inputs:
   - name: pxf_tarball
 params:
   GROUP: feature
+  IMPERSONATION: true
+  PXF_JVM_OPTS:
   TARGET_OS: centos
   TARGET_OS_VERSION: 6
 run:
