--- a/concourse/tasks/test_pxf.yml
+++ b/concourse/tasks/test_pxf.yml
@@ -12,7 +12,7 @@ params:
   HADOOP_CLIENT: HDP
   GROUP: smoke
   TARGET_OS: centos
-  TARGET_OS_VERSION: 6
+  TARGET_OS_VERSION:
   TEST_ENV:
 run:
   path: pxf_src/concourse/scripts/test_pxf.bash
